# scholar-mcp

./: .copier-answers.yml  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CLAUDE.md  Dockerfile  FORKING.md  LICENSE  README.md  REVIEW.md  SYNC.md  TEMPLATE.md  codecov.yml  compose.yml  coverage.json  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  server.json  versions.json
.claude/: CLAUDE.md
.claude-plugin/plugin/: .mcp.json  README.md
.claude-plugin/plugin/.claude-plugin/: plugin.json
.github/codeql/: codeql-config.yml
.github/workflows/: bootstrap.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  copier-update.yml  coverage-status.yml  docs.yml  release.yml
1.8/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
1.8/configuration/: index.html  index.md
1.8/configuration-generator/: index.html
1.8/deployment/claude-desktop/: index.html
1.8/deployment/docker/: index.html  index.md
1.8/deployment/oidc/: index.html  index.md
1.8/deployment/systemd/: index.html  index.md
1.8/guides/: index.html  index.md
1.8/guides/authentication/: index.html  index.md
1.8/guides/citation-graphs/: index.html
1.8/guides/claude-code-plugin/: index.html
1.8/guides/claude-desktop/: index.html
1.8/guides/pdf-conversion/: index.html  index.md
1.8/guides/standards/: index.html
1.8/installation/: index.html  index.md
1.8/prompts/: index.html
1.8/search/: search_index.json
1.8/tools/: index.html  index.md
1.9/: 404.html  index.html  index.md  llms-full.txt  llms.txt  objects.inv  sitemap.xml
1.9/configuration/: index.html  index.md
1.9/configuration-generator/: index.html  index.md
1.9/deployment/claude-desktop/: index.html
1.9/deployment/docker/: index.html  index.md
1.9/deployment/oidc/: index.html  index.md
1.9/deployment/systemd/: index.html  index.md
1.9/guides/: index.html  index.md
1.9/guides/authentication/: index.html  index.md
1.9/guides/citation-graphs/: index.html  index.md
1.9/guides/claude-code-plugin/: index.html
1.9/guides/claude-desktop/: index.html  index.md
1.9/guides/pdf-conversion/: index.html
1.9/guides/standards/: index.html
1.9/installation/: index.html  index.md
1.9/prompts/: index.html
1.9/tools/: index.html  index.md
docs/: configuration-generator.md  configuration.md  design.md  index.md  installation.md  prompts.md
docs/deployment/: claude-desktop.md  docker.md  oidc.md  systemd.md
docs/guides/: authentication.md  citation-graphs.md  claude-code-plugin.md  claude-desktop.md  file-exchange.md  index.md  pdf-conversion.md  standards.md
docs/javascripts/config-wizard/: generators.js  wizard-spec-schema.json  wizard-spec.json  wizard.js
docs/plans/: 2026-04-05-patent-extension.md  2026-04-06-book-support.md  2026-04-06-v050-book-citation-polish.md  2026-04-07-standards-support.md  2026-04-12-enrichment-pipeline.md
docs/specs/: 2026-04-05-patent-extension-design.md  2026-04-06-book-support-design.md  2026-04-06-v050-book-citation-polish-design.md  2026-04-07-standards-support-design.md  2026-04-12-enrichment-pipeline-design.md  2026-04-13-pr2-iso-iec-relaton-design.md  2026-04-13-standards-tier2-design.md  2026-04-15-pr3-ieee-design.md  2026-04-15-pr4a-cc-loader-design.md  2026-04-16-pr4b-cen-loader-design.md  2026-04-16-pr5-standards-enrichment-design.md
docs/stylesheets/: config-wizard.css
docs/superpowers/notes/: 2026-04-21-step6-replay-triage.md
docs/superpowers/plans/: 2026-04-04-scholar-mcp.md  2026-04-05-citation-generation.md  2026-04-08-epo-throttle.md  2026-04-08-logging-standard.md  2026-04-08-standards-backends-and-patent-pdf.md  2026-04-11-ci-fork-codecov-fix.md  2026-04-11-claude-plugin-mcpb-port.md  (+2 more)
docs/tools/: index.md
examples/: bearer-auth.env  oidc.env
packaging/: env.example  nfpm.yaml  scholar-mcp.service  test-install.sh
packaging/mcpb/: build.sh  manifest.json.in  pyproject.toml.in
packaging/scripts/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
scripts/: bump_manifests.py  copier_update_aggregator.py  rename.sh  vendor_spa.py
scripts/copier_update_prompts/: job_a.md  job_b.md  job_c.md
src/fastmcp_server_template/: _server_deps.py  _server_prompts.py  _server_resources.py  _server_tools.py  cli.py  config.py  mcp_server.py
src/scholar_mcp/: __init__.py  _book_enrichment.py  _cache.py  _chapter_parser.py  _citation_formatter.py  _citation_names.py  _crossref_client.py  _docling_client.py  _enricher_crossref.py  _enricher_google_books.py  _enricher_openalex.py  _enricher_openlibrary.py  _enricher_standards.py  _enrichment.py  _epo_client.py  _epo_xml.py  _google_books_client.py  _openalex_client.py  _openlibrary_client.py  _patent_numbers.py  _pdf_url_resolver.py  _protocols.py  _rate_limiter.py  _record_types.py  _relaton_live.py  _s2_client.py  _server_apps.py  _server_deps.py  _server_tools.py  _standards_client.py  _standards_sync.py  _sync_cc.py  _sync_cen.py  _sync_relaton.py  _task_queue.py  _tools_books.py  _tools_citation.py  _tools_graph.py  _tools_patent.py  _tools_pdf.py  (+9 more)
tests/: conftest.py  test_async_queueing.py  test_book_enrichment.py  test_book_enrichment_integration.py  test_cache.py  test_cache_books.py  test_cache_standards.py  test_chapter_parser.py  test_citation_formatter.py  test_citation_names.py  test_cli.py  test_cli_sync_standards.py  test_config.py  test_config_wizard_domain.py  test_config_wizard_drift.py  test_config_wizard_smoke.py  test_config_wizard_spec_schema.py  test_crossref_client.py  test_docling_client.py  test_enricher_crossref.py  test_enricher_google_books.py  test_enricher_openalex.py  test_enricher_openlibrary.py  test_enricher_standards.py  test_enrichment.py  test_epo_client.py  test_epo_xml.py  test_google_books_client.py  test_mcp_server.py  test_openalex_client.py  test_openlibrary_client.py  test_packaging_mcpb.py  test_patent_numbers.py  test_pdf_url_resolver.py  test_protocols.py  test_rate_limiter.py  test_record_types.py  test_relaton_live.py  test_s2_client.py  test_server.py  (+19 more)
(+23 files in other folders)
