[project]
name = "pvliesdonk-scholar-mcp"
version = "1.3.0"
description = "FastMCP server for Semantic Scholar with OpenAlex enrichment and docling PDF conversion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
keywords = ["mcp", "pvliesdonk-scholar-mcp", "scholar-mcp", "model-context-protocol", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx",
    "aiosqlite",
    "click>=8.0",
    "python-epo-ops-client>=4.2",
    "lxml>=5.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=3.2.0,<4", "uvicorn"]
all = ["fastmcp>=3.2.0,<4", "uvicorn"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pip-audit>=2.7",
    "respx>=0.20",
    "diff-cover>=9.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-llmstxt>=0.2",
    "pygments!=2.20.0",  # 2.20.0 crashes on empty filename in HtmlFormatter
]

[project.scripts]
scholar-mcp = "scholar_mcp.cli:main"

[project.urls]
Repository = "https://github.com/pvliesdonk/scholar-mcp"
Documentation = "https://pvliesdonk.github.io/scholar-mcp/"
Issues = "https://github.com/pvliesdonk/scholar-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholar_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Depends() and CurrentContext() calls in argument defaults are the standard
# FastMCP dependency injection pattern — B008 is a false positive here.
# Context/FastMCP imports must stay runtime (not TYPE_CHECKING) for DI.
"src/scholar_mcp/mcp_server.py" = ["B008", "TCH002"]
"src/scholar_mcp/_server_deps.py" = ["ARG001", "B008", "TCH002", "TCH003"]
"src/scholar_mcp/_cache.py" = ["TCH003"]
"src/scholar_mcp/_docling_client.py" = ["TCH002"]
"src/scholar_mcp/_rate_limiter.py" = ["TCH002", "TCH003"]
"src/scholar_mcp/_server_tools.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_search.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_graph.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_recommendations.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_utility.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_pdf.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_tasks.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_citation.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_tools_patent.py" = ["ARG001", "B008", "TCH001", "TCH002"]
"src/scholar_mcp/_task_queue.py" = ["TCH003"]
"src/scholar_mcp/_server_resources.py" = ["B008", "TCH001", "TCH002"]
"src/scholar_mcp/_server_prompts.py" = ["B008", "TCH002"]
# pytest fixtures need runtime imports; Path used in signatures needs to be importable at runtime.
"tests/*.py" = ["ARG001", "TCH001", "TCH002", "TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["scholar_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/scholar_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["epo_ops", "epo_ops.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lxml", "lxml.*"]
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "angular"
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
